채용페이지 포트폴리오 섹션- 이미지 경로 오류 수정

--- a/recruit/index.html
+++ b/recruit/index.html
@@ -423,14 +423,14 @@
                                   </div>
                                   <ul>
                                       <li><a href="https://duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                              target=_new><img src="assets/images/widgets/4.png" alt="DUNI"
+                                              target=_new><img src="/assets/images/widgets/4.png" alt="DUNI"
                                                   style="width:45px"><br>
                                               <div class="widget-title">
                                                   <H6>DRONE SERVICE</H6>
                                               </div>
                                           </a></li>
                                       <li><a href="https://pilot.duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                              target=_new><img src="assets/images/widgets/4.png" alt="DUNI"
+                                              target=_new><img src="/assets/images/widgets/4.png" alt="DUNI"
                                                   style="width:45px"><br>
                                               <div class="widget-title">
                                                   <H6>PILOT CENTER</H6>
@@ -439,22 +439,22 @@
                                   </ul>
                                   <ul>
                                       <li><a href="https://developer.duni.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                              target=_new><img src="assets/images/widgets/4.png" alt="DUNI"
+                                              target=_new><img src="/assets/images/widgets/4.png" alt="DUNI"
                                                   style="width:45px"><br>
                                               <div class="widget-title">
                                                   <H6>SW DEVELOPER</H6>
                                               </div>
                                           </a></li>
                                       <li><a href="https://dkdk.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                              target=_new><img src="assets/images/widgets/1.png" alt="두근두근"
+                                              target=_new><img src="/assets/images/widgets/1.png" alt="두근두근"
                                                   style="width:65px;"></a></li>
                                   </ul>
                                   <ul>
                                       <li><a href="https://dromi.aply.biz/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                              target=_new><img src="assets/images/widgets/3.png" alt="드로미"
+                                              target=_new><img src="/assets/images/widgets/3.png" alt="드로미"
                                                   style="width:53px;"></a></li>
                                       <li><a href="https://drdr.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
-                                              target=_new><img src="assets/images/widgets/2.png" alt="두런두런"
+                                              target=_new><img src="/assets/images/widgets/2.png" alt="두런두런"
                                                   style="width:65px;"></a></li>
                                   </ul>
                               </aside>
