family site 선택기 추가

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12 m-auto text-center">
-                        <h4><b>즐겁고 재미있게 일하기 위한 진보된 플랫폼<span class="blinking-cursor">_</span></b></h4>
+                        <h4><b>즐겁고 재미있게 일하기 위한<br>진보된 플랫폼<span class="blinking-cursor">_</span></b></h4>
                     </div>
                 </div>
             </div>
@@ -239,7 +239,8 @@
                     </div>
                     <div class="col-lg-6 offset-lg-1">
                         <h5>DUNI : Drone Universe<span class="blinking-cursor">_</span></h5>
-                        <p class="lead">드론 기업과 개인의 성장, 역량 강화를 돕는<br> 서비스 수요 및 기술 연결 플랫폼</p>
+                        <h6>드론 기업과 개인의 성장, 역량 강화를 돕는</h6>
+                        <h6>서비스 수요 및 기술 연결 플랫폼</h6>
                     </div>
 
                     <div class="col-lg-6 col-md-6">
@@ -1149,8 +1150,20 @@
                                         <hr>
                                         E-mail: <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>
                                         Phone: +82-2-6956-0801<br>
-                                        Fax: +82-2-6468-2031<br>
-                                        <a href="/recruit/index.html"><span class="menu-item-span">RECRUIT</span></a>
+                                        Fax: +82-2-6468-2031<br>                                        
+                                        <select id="selSites" class="select" style="background-color: #333; color: #aaa; border-color: #888;" onChange="changedSelector">
+                                            <option selected>Family site</option>                                            
+                                            <option>-------------------------------------</option>
+                                            <option value="recruit">RECRUIT</option>
+                                            <option>-------------------------------------</option>
+                                            <option value="duni">DUNI</option>
+                                            <option value="dunipilot">DUNI PILOT CENTER</option>
+                                            <option value="dunistock">DUNI STOCK</option>
+                                            <option>-------------------------------------</option>
+                                            <option value="dromi">DROMI</option>
+                                            <option value="dkdk">DKDK</option>
+                                            <option value="drdr">DRDR</option>
+                                        </select>                                                                                    
                                     </p>
                                     <ul class="social-icons">
                                         <li><a href="https://www.instagram.com/aplyplatform"><i
@@ -1163,7 +1176,7 @@
                                                     class="fab fa-linkedin"></i></a></li>
                                         <li>
                                             <div colorscheme="dark" class="fb-like"
-                                                data-href="https://facebook.com/aplyplatform" data-width="300"
+                                                data-href="https://facebook.com/aplyplatform"
                                                 data-layout="standard" data-action="like" data-size="small"
                                                 data-show-faces="true" data-share="false"></div>
                                         </li>
