family site 에 blog 추가

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="container-fluid">
             <!-- Brand-->
             <div class="inner-header"><a class="inner-brand" href="index.html"><img src="assets/images/logo_white.png"
-                        border=0 width=70 id="top_logo"></a></div>
+                        border="0" width="70" id="top_logo"></a></div>
             <!-- Navigation-->
             <div class="inner-navigation collapse">
                 <div class="inner-nav">
@@ -1150,11 +1150,14 @@
                                         <hr>
                                         E-mail: <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>
                                         Phone: +82-2-6956-0801<br>
-                                        Fax: +82-2-6468-2031<br>                                        
-                                        <select id="selSites" class="select" style="background-color: #333; color: #aaa; border-color: #888;" onChange="changedSelector">
-                                            <option selected>Family site</option>                                            
+                                        Fax: +82-2-6468-2031<br>
+                                        <select id="selSites" class="select"
+                                            style="background-color: #333; color: #aaa; border-color: #888;"
+                                            onChange="changedSelector">
+                                            <option selected>Family site</option>
                                             <option>-------------------------------------</option>
                                             <option value="recruit">RECRUIT</option>
+                                            <option value="blog">BLOG</option>
                                             <option>-------------------------------------</option>
                                             <option value="duni">DUNI</option>
                                             <option value="dunipilot">DUNI PILOT CENTER</option>
@@ -1163,7 +1166,7 @@
                                             <option value="dromi">DROMI</option>
                                             <option value="dkdk">DKDK</option>
                                             <option value="drdr">DRDR</option>
-                                        </select>                                                                                    
+                                        </select>
                                     </p>
                                     <ul class="social-icons">
                                         <li><a href="https://www.instagram.com/aplyplatform"><i
@@ -1176,9 +1179,9 @@
                                                     class="fab fa-linkedin"></i></a></li>
                                         <li>
                                             <div colorscheme="dark" class="fb-like"
-                                                data-href="https://facebook.com/aplyplatform"
-                                                data-layout="standard" data-action="like" data-size="small"
-                                                data-show-faces="true" data-share="false"></div>
+                                                data-href="https://facebook.com/aplyplatform" data-layout="standard"
+                                                data-action="like" data-size="small" data-show-faces="true"
+                                                data-share="false"></div>
                                         </li>
                                     </ul>
                                 </div>
