--- a/recruit/index.html
+++ b/recruit/index.html
@@ -475,6 +475,8 @@
                                             onChange="changedSelector">
                                             <option selected>Family site</option>
                                             <option>-------------------------------------</option>
+                                            <option value="blog">BLOG</option>
+                                            <option>-------------------------------------</option>
                                             <option value="duni">DUNI</option>
                                             <option value="dunipilot">DUNI PILOT CENTER</option>
                                             <option value="dunistock">DUNI STOCK</option>
