catchme 포트폴리오 추가

--- a/index.html
+++ b/index.html
@@ -404,6 +404,21 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-6 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/widgets/6.png" border=0></div>
+                            <div class="feature-content">
+                                <h6>캐치미 (CatchMe)</h6>
+                                <p>AI 기반의 영상인식을 통한 "무궁화 꽃이 피었습니다" 게임</p>
+                                <p>
+                                    <a href="https://catchme.aply.biz/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
+                                        target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
+                                    <a href="https://www.facebook.com/TheCatchMe/" target="new"><i
+                                            class="ti-facebook"></i></a>&nbsp;&nbsp;                                    
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -1166,6 +1181,7 @@
                                             <option value="dromi">DROMI</option>
                                             <option value="dkdk">DKDK</option>
                                             <option value="drdr">DRDR</option>
+                                            <option value="catchme">CATCHME</option>
                                         </select>
                                     </p>
                                     <ul class="social-icons">
@@ -1234,6 +1250,11 @@
                                     <li><a href="https://drdr.io/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
                                             target=_new><img src="assets/images/widgets/2.png" alt="두런두런"
                                                 style="width:65px;"></a></li>
+                                </ul>
+                                <ul>
+                                    <li><a href="https://catchme.aply.biz/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
+                                            target=_new><img src="assets/images/widgets/6.png" alt="캐치미"
+                                                style="width:53px;"></a></li>                                    
                                 </ul>
                             </aside>
                         </div>
