캐치미 문구 수정, 포트폴리오 이미지 변경

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                             <div class="icon-box-icon"><img src="assets/images/widgets/6.png" border=0></div>
                             <div class="feature-content">
                                 <h6>캐치미 (CatchMe)</h6>
-                                <p>AI 기반의 "무궁화 꽃이 피었습니다" 영상인식 게임</p>
+                                <p>AI 기반 영상인식 "무궁화 꽃이 피었습니다" 게임</p>
                                 <p>
                                     <a href="https://catchme.aply.biz/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
                                         target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
