문구 배치 정리, 효과 추가

--- a/index.html
+++ b/index.html
@@ -149,8 +149,36 @@
             </div>
         </section>
 
+        
         <!-- Modal-->
-        <section class="module bg-white">
+        <section class="module divider-top" id="data_t">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-6 offset-lg-1">
+                        <p class="m-b-30"><img src="assets/images/main/data_t.png" alt=""></p>
+                    </div>
+                    <div class="col-lg-5">
+                        <div class="accordion" id="accordion2">
+                            <div class="accordion-item">
+                                <div class="accordion-item-header">
+                                    <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-2"><span
+                                                id="small_text_2"></span><span class="blinking-cursor">_</span></a></h6>
+                                </div>
+                                <div class="collapse" id="collapse-2" data-parent="#accordion2">
+                                    <div class="accordion-item-body">
+                                        <p>데이터를 이해하고, 가치를 발굴하고, 인공지능을 디자인 합니다.<br>AR, 드론의 영상 데이터 분석, 이상탐지(Anomaly
+                                            Detection) 기술을 활용하여 좀 더 간편하게 문제를 확인하고 인사이트를 얻을 수 있는 방법을 연구하고 제공합니다.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                    
+                </div>
+            </div>
+        </section>
+
+        <!-- Modal-->
+        <section class="module bg-white" id="drone_t">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
@@ -163,7 +191,7 @@
                                     <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-1"><span
                                                 id="small_text_1"></span><span class="blinking-cursor">_</span></a></h6>
                                 </div>
-                                <div class="collapse show" id="collapse-1" data-parent="#accordion1">
+                                <div class="collapse" id="collapse-1" data-parent="#accordion1">
                                     <div class="accordion-item-body">
                                         <p>드론 기업에 SW와 기술을 제공하고 서비스 수요와 전문가 기술을 연결하여 드론 기업과 개인의 성장, 역량강화를 돕는 빅데이터, AI, AR
                                             기반의 드론 서비스 플랫폼을 개발합니다.
@@ -176,34 +204,9 @@
                 </div>
             </div>
         </section>
+
         <!-- Modal-->
-        <section class="module divider-top">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-5">
-                        <div class="accordion" id="accordion2">
-                            <div class="accordion-item">
-                                <div class="accordion-item-header">
-                                    <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-2"><span
-                                                id="small_text_2"></span><span class="blinking-cursor">_</span></a></h6>
-                                </div>
-                                <div class="collapse show" id="collapse-2" data-parent="#accordion2">
-                                    <div class="accordion-item-body">
-                                        <p>데이터를 이해하고, 가치를 발굴하고, 인공지능을 디자인 합니다.<br>AR, 드론의 영상 데이터 분석, 이상탐지(Anomaly
-                                            Detection) 기술을 활용하여 좀 더 간편하게 문제를 확인하고 인사이트를 얻을 수 있는 방법을 연구하고 제공합니다.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 offset-lg-1">
-                        <p class="m-b-30"><img src="assets/images/main/data_t.png" alt=""></p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Modal-->
-        <section class="module module divider-top">
+        <section class="module module divider-top" id="comm_t">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
@@ -216,7 +219,7 @@
                                     <h6><a class="accordion-link" data-toggle="collapse" href="#collapse-3"><span
                                                 id="small_text_3"></span><span class="blinking-cursor">_</span></a></h6>
                                 </div>
-                                <div class="collapse show" id="collapse-3" data-parent="#accordion3">
+                                <div class="collapse" id="collapse-3" data-parent="#accordion3">
                                     <div class="accordion-item-body">
                                         <p>최신 기술과 트렌드를 끊임없이 학습하고 문제와 요구사항을 정확하게 이해하여 불편없이 사용할 수 있는 SW와 HW를 개발합니다.</p>
                                     </div>
@@ -414,7 +417,7 @@
                                     <a href="https://catchme.aply.biz/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
                                         target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
                                     <a href="https://www.facebook.com/TheCatchMe/" target="new"><i
-                                            class="ti-facebook"></i></a>&nbsp;&nbsp;                                    
+                                            class="ti-facebook"></i></a>&nbsp;&nbsp;
                                 </p>
                             </div>
                         </div>
@@ -1254,7 +1257,7 @@
                                 <ul>
                                     <li><a href="https://catchme.aply.biz/?utm_source=aply_homepage&utm_medium=portfolio&utm_campaign=not_campaign"
                                             target=_new><img src="assets/images/widgets/6.png" alt="캐치미"
-                                                style="width:53px;"></a></li>                                    
+                                                style="width:53px;"></a></li>
                                 </ul>
                             </aside>
                         </div>
