--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
         <section class="module divider-top" id="data_t">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-6 offset-lg-1">
+                    <div class="col-lg-6">
                         <p class="m-b-30"><img src="assets/images/main/data_t.png" alt=""></p>
                     </div>
-                    <div class="col-lg-5">
+                    <div class="col-lg-5 offset-lg-1">
                         <div class="accordion" id="accordion2">
                             <div class="accordion-item">
                                 <div class="accordion-item-header">
@@ -167,7 +167,7 @@
                                 <div class="collapse" id="collapse-2" data-parent="#accordion2">
                                     <div class="accordion-item-body">
                                         <p>데이터를 이해하고, 가치를 발굴하고, 인공지능을 디자인 합니다.<br>AR, 드론의 영상 데이터 분석, 이상탐지(Anomaly
-                                            Detection) 기술을 활용하여 좀 더 간편하게 문제를 확인하고 인사이트를 얻을 수 있는 방법을 연구하고 제공합니다.</p>
+                                            Detection) 기술을 활용하여 좀 더 간편하게 문제를 확인하고 인사이트를 얻을 수 있는 방법을 연구합니다.</p>
                                     </div>
                                 </div>
                             </div>
@@ -193,8 +193,8 @@
                                 </div>
                                 <div class="collapse" id="collapse-1" data-parent="#accordion1">
                                     <div class="accordion-item-body">
-                                        <p>드론 기업에 SW와 기술을 제공하고 서비스 수요와 전문가 기술을 연결하여 드론 기업과 개인의 성장, 역량강화를 돕는 빅데이터, AI, AR
-                                            기반의 드론 서비스 플랫폼을 개발합니다.
+                                        <p>드론 기업에 SW와 기술을 제공하고 서비스 수요와 전문가 기술을 연결하여 드론 서비스의 성장, 역량강화를 돕는 빅데이터, AI, AR
+                                            기반의 드론 SW 플랫폼을 개발합니다.
                                         <p>
                                     </div>
                                 </div>
@@ -206,7 +206,7 @@
         </section>
 
         <!-- Modal-->
-        <section class="module module divider-top" id="comm_t">
+        <section class="module module" id="comm_t">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
