D.PILOT 앱 링크 추가

--- a/index.html
+++ b/index.html
@@ -301,6 +301,26 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/widgets/5.png" border=0></div>
                             <div class="icon-box-title">
+                                <a href="https://apps.apple.com/gt/app/d-pilot/id1528959261/?utm_source=aply_homepage&utm_medium=title&utm_campaign=not_campaign"
+                                    target="new">D.PILOT</a>
+                            </div>
+                            <div class="icon-box-content">
+                                <p>
+                                    비행계획 수립 및 자동비행을 지원하는 드론운용 앱
+                                </p>
+
+                                <p>
+                                    <a href="https://apps.apple.com/gt/app/d-pilot/id1528959261/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
+                                        target="new"><i class="ti-link"></i></a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/widgets/5.png" border=0></div>
+                            <div class="icon-box-title">
                                 <a href="https://dunistock.com/?utm_source=aply_homepage&utm_medium=title&utm_campaign=not_campaign"
                                     target="new">DUNI 스탁</a>
                             </div>
