--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
                                 </div>
                                 <div class="collapse" id="collapse-2" data-parent="#accordion2">
                                     <div class="accordion-item-body">
-                                        <p>데이터를 이해하고 가치를 발굴하고 인공지능을 디자인하며, 드론의 영상 데이터 분석/이상탐지(Anomaly
-                                            Detection)/AR 기술을 활용하여 간편하게 문제를 확인하고 인사이트를 얻을 수 있는 방법을 연구합니다.</p>
+                                        <p>데이터를 이해하고 가치를 발굴하며 인공지능을 디자인합니다. 데이터 분석/이상탐지(Anomaly Detection)/AR 기술을 기반으로 문제를 간편하게 확인하고 인사이트를 얻을 수 있는 방법을 제공합니다.</p>
                                     </div>
                                 </div>
                             </div>
