--- a/index.html
+++ b/index.html
@@ -1147,11 +1147,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h4>Location<span class="blinking-cursor">_</span></h4>
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.378852946479!2d127.04370251543789!3d37.54613702980172!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca5bfb4bdf1e1%3A0x33456ca6178c5e26!2z7Zek7J206re465287Jq065OcIOyEnOyauOyIsuygkCAoSEVZR1JPVU5EIFNFT1VMIEZPUkVTVCk!5e0!3m2!1sko!2skr!4v1614526562322!5m2!1sko!2skr"
-                            width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen=""
-                            aria-hidden="false" tabindex="0" loading="lazy"></iframe>
-
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12643.838302172311!2d127.0410615!3d37.6031104!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x618142d4f5808743!2z6rO16rCE7Y-0652866as7Iqk!5e0!3m2!1sko!2skr!4v1646202636798!5m2!1sko!2skr" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen=""
+                        aria-hidden="false" tabindex="0" loading="lazy"></iframe>
                     </div>
                 </div>
                 <div class="row">
@@ -1181,12 +1178,11 @@
                                 </div>
                                 <div class="textwidget">
                                     <p>
-                                        Office: S426/S427, 4F, 115, Wangsimni-ro, Seongdong-gu, Seoul, Republic of Korea
-                                        / 04768
+                                        Office: 5F, 17-5, Hwarang-ro 11-gil, Seongbuk-gu, Seoul, Republic of Korea
+                                        / 02751
                                         <hr>
                                         E-mail: <a href=mailto:contactus@aply.biz>contactus@aply.biz</a><br>
                                         Phone: +82-2-6956-0801<br>
-                                        Fax: +82-2-6468-2031<br>
                                         <select id="selSites" class="select"
                                             style="background-color: #333; color: #aaa; border-color: #888;"
                                             onChange="changedSelector">
