--- a/recruit/index.html
+++ b/recruit/index.html
@@ -464,12 +464,11 @@
                                 <div class="textwidget">
                                     <p>즐겁고 재미있게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
                                     <p>
-                                        Office: S426/S427, 4F, 115, Wangsimni-ro, Seongdong-gu, Seoul, Republic of Korea
-                                        / 04768
+                                        Office: 5F, 17-5, Hwarang-ro 11-gil, Seongbuk-gu, Seoul, Republic of Korea
+                                        / 02751
                                         <hr>
                                         E-mail: <a href=mailto:contactus@aply.biz>recruit@aply.biz</a><br>
                                         Phone: +82-2-6956-0801<br>
-                                        Fax: +82-2-6468-2031<br>
                                         <select id="selSites" class="select"
                                             style="background-color: #333; color: #aaa; border-color: #888;"
                                             onChange="changedSelector">
