--- a/symbol/index.html
+++ b/symbol/index.html
@@ -301,9 +301,8 @@
                                 </div>
                                 <div class="collapse show" id="collapse-6" data-parent="#accordion6">
                                     <div class="accordion-item-body">
-                                        <p>- 본사 한글: 04768 / 서울특별시 성동구 왕십리로 115 헤이그라운드 서울숲점 4층 S426,S427 주식회사 어플라이</p>
-                                        <p>- 본사 영문: 04768 / APLY Inc. / S426/S427 4F, 115, Wangsimni-ro, Seongdong-gu,
-                                            Seoul, Republic of Korea</p>
+                                        <p>- 본사 한글: 02751 / 서울특별시 성북구 화랑로11길 17-5 5층 주식회사 어플라이</p>
+                                        <p>- 본사 영문: 02751 / APLY Inc. / 5F, 17-5, Hwarang-ro 11-gil, Seongbuk-gu, Seoul, Republic of Korea</p>
                                         </p>
                                     </div>
                                 </div>
@@ -447,10 +446,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h4>서울 본사</h4>
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.378852946479!2d127.04370251543789!3d37.54613702980172!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca5bfb4bdf1e1%3A0x33456ca6178c5e26!2z7Zek7J206re465287Jq065OcIOyEnOyauOyIsuygkCAoSEVZR1JPVU5EIFNFT1VMIEZPUkVTVCk!5e0!3m2!1sko!2skr!4v1614526562322!5m2!1sko!2skr"
-                            width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen=""
-                            aria-hidden="false" tabindex="0" loading="lazy"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12643.838302172311!2d127.0410615!3d37.6031104!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x618142d4f5808743!2z6rO16rCE7Y-0652866as7Iqk!5e0!3m2!1sko!2skr!4v1646202636798!5m2!1sko!2skr" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen=""
+                        aria-hidden="false" tabindex="0" loading="lazy"></iframe>
                     </div>
                     <!--
                         <div class="col-md-6">
@@ -489,12 +486,11 @@
                                 <div class="textwidget">
                                     <p>즐겁고 재미있게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
                                     <p>
-                                        Head Office: 4F, 115, Wangsimni-ro, Seongdong-gu, Seoul, Republic of Korea /
-                                        04768
+                                        Office: 5F, 17-5, Hwarang-ro 11-gil, Seongbuk-gu, Seoul, Republic of Korea
+                                        / 02751
                                         <hr>
                                         E-mail: <a href=mailto:contactus@aply.biz>recruit@aply.biz</a><br>
-                                        Phone: +82-2-6956-0801<br>
-                                        Fax: +82-2-6468-2031
+                                        Phone: +82-2-6956-0801
                                     </p>
                                     <ul class="social-icons">
                                         <li><a href="https://www.instagram.com/aplyplatform"><i
