--- a/recruit/index.html
+++ b/recruit/index.html
@@ -430,10 +430,9 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h4>Location</h4>
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3163.378852946479!2d127.04370251543789!3d37.54613702980172!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca5bfb4bdf1e1%3A0x33456ca6178c5e26!2z7Zek7J206re465287Jq065OcIOyEnOyauOyIsuygkCAoSEVZR1JPVU5EIFNFT1VMIEZPUkVTVCk!5e0!3m2!1sko!2skr!4v1614526562322!5m2!1sko!2skr"
-                            width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen=""
-                            aria-hidden="false" tabindex="0" loading="lazy"></iframe>
+                        <iframe src="https://snapwidget.com/embed/653802" class="snapwidget-widget"
+                            allowtransparency="true" frameborder="0" scrolling="no"
+                            style="border:none; overflow:hidden; width:330px; height:580px"></iframe>
                     </div>
 
                     <div class="row">
