--- a/recruit/index.html
+++ b/recruit/index.html
@@ -430,9 +430,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h4>Location</h4>
-                        <iframe src="https://snapwidget.com/embed/653802" class="snapwidget-widget"
-                            allowtransparency="true" frameborder="0" scrolling="no"
-                            style="border:none; overflow:hidden; width:330px; height:580px"></iframe>
+                        <<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12643.838302172311!2d127.0410615!3d37.6031104!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x618142d4f5808743!2z6rO16rCE7Y-0652866as7Iqk!5e0!3m2!1sko!2skr!4v1646202636798!5m2!1sko!2skr" width="100%" height="500px" frameborder="0" style="border:0;" allowfullscreen=""
+                        aria-hidden="false" tabindex="0" loading="lazy"></iframe>
                     </div>
 
                     <div class="row">
