--- a/index.html
+++ b/index.html
@@ -1308,7 +1308,7 @@
     <script src="assets/js/custom/popper.min.js"></script>
     <script src="assets/js/bootstrap/bootstrap.min.js"></script>
     <script src="assets/js/custom/plugins.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <script src="assets/js/custom/anime.min.js"></script>
     <script src="assets/js/custom/jquery.youtube-background.js?v=1.0.7"></script>
     <script src="assets/js/custom/custom.js"></script>
 </body>
