404 페이지의 복구 경로 수정

--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>404 HTML Template by Colorlib</title>
+<title>APLY : Advanced Platform To Fly</title>
 
 <style>/* cyrillic-ext */
 
@@ -118,6 +118,17 @@ body {
 <h2>Oops! This Page Could Not Be Found</h2>
 <p>Sorry but the page you are looking for does not exist, have been removed. name changed or is temporarily unavailable</p>
 <a href="https://aply.biz">Go To Homepage</a>
+<br><br>
+<div class="copyright">
+  <p><img src="https://aply.biz/assets/images/logo.png" width="38px"> ©
+      <script>
+          var cYear = (new Date()).getFullYear();
+          document.write(cYear);
+      </script>
+      APLY Inc.
+  </p>
+</div>
+
 </div>
 </div>
 </body>
