지원사업 선정 히스토리 추가

--- a/index.html
+++ b/index.html
@@ -473,6 +473,19 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                             <div class="icon-box-title">
+                                <h6>2022-04</h6>
+                            </div>
+                            <div class="icon-box-content">
+                                <p>경기 AR/VR오디션 지원사업 선정
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
+                            <div class="icon-box-title">
                                 <h6>2021-07</h6>
                             </div>
                             <div class="icon-box-content">
