R&D 키오스크 발간사업 선정 내용 추가

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords"
-        content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw, vision, anomaly, detection, machine, ai, bigdata">
+        content="AR, 증강현실, 메타버스, 콘텐츠, drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw, vision, anomaly, detection, machine, ai, bigdata">
     <meta name="description" content="즐겁고 재미있게 일하기 위한 진보된 플랫폼">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:description" content="즐겁고 재미있게 일하기 위한 진보된 플랫폼">
@@ -40,9 +40,9 @@
     <meta itemprop="name" content="APLY">
     <meta itemprop="image" content="https://www.aply.biz/assets/images/site_title.png">
     <meta itemprop="description"
-        content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, data, bigdata, AI, 드론, 감성, 서비스, 소프트웨어, sw">
+        content="즐겁고 재미있게 일하기 위한 진보된 플랫폼을 만나보세요!">
     <meta itemprop="keywords"
-        content="drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, data, bigdata, AI, 드론, 감성, 서비스, 소프트웨어, sw">
+        content="AR, 증강현실, 메타버스, 콘텐츠, drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, data, bigdata, AI, 드론, 감성, 서비스, 소프트웨어, sw">
     <meta itemprop="url" content="https://www.aply.biz/">
 
     <!-- Favicons-->
@@ -473,10 +473,23 @@
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
                             <div class="icon-box-title">
+                                <h6>2022-05</h6>
+                            </div>
+                            <div class="icon-box-content">
+                                <p>과학기술정보통신부 R&D KIOSK발간 사업 선정
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><span class="ti-location-arrow"></span></div>
+                            <div class="icon-box-title">
                                 <h6>2022-04</h6>
                             </div>
                             <div class="icon-box-content">
-                                <p>경기 AR/VR오디션 지원사업 선정
+                                <p>경기 VR/AR 오디션 상용화 지원사업 선정
                                 </p>
                             </div>
                         </div>
