--- a/index.html
+++ b/index.html
@@ -378,6 +378,37 @@
 
                     <div class="col-lg-6 col-md-6">
                         <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/widgets/7.png" border=0></div>
+                            <div class="feature-content">
+                                <h6>어플엑스 (APLX)</h6>
+                                <p>증강현실 기반 홍보 솔루션</p>
+                                <p>
+                                    <a href="https://aplx.aply.biz/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
+                                        target="new"><i class="ti-link"></i></a>                                    
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    
+                    <div class="col-lg-6 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-icon"><img src="assets/images/widgets/6.png" border=0></div>
+                            <div class="feature-content">
+                                <h6>캐치미 (CatchMe)</h6>
+                                <p>AI 기반 영상인식 "무궁화 꽃이 피었습니다" 게임</p>
+                                <p>
+                                    <a href="https://catchme.aply.biz/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
+                                        target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
+                                    <a href="https://www.facebook.com/TheCatchMe/" target="new"><i
+                                            class="ti-facebook"></i></a>&nbsp;&nbsp;
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-6">
+                        <div class="icon-box icon-box-left">
                             <div class="icon-box-icon"><img src="assets/images/widgets/3.png" border=0></div>
                             <div class="feature-content">
                                 <h6>드로미 (DROMI)</h6>
@@ -425,21 +456,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6">
-                        <div class="icon-box icon-box-left">
-                            <div class="icon-box-icon"><img src="assets/images/widgets/6.png" border=0></div>
-                            <div class="feature-content">
-                                <h6>캐치미 (CatchMe)</h6>
-                                <p>AI 기반 영상인식 "무궁화 꽃이 피었습니다" 게임</p>
-                                <p>
-                                    <a href="https://catchme.aply.biz/?utm_source=aply_homepage&utm_medium=link&utm_campaign=not_campaign"
-                                        target="new"><i class="ti-link"></i></a>&nbsp;&nbsp;
-                                    <a href="https://www.facebook.com/TheCatchMe/" target="new"><i
-                                            class="ti-facebook"></i></a>&nbsp;&nbsp;
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
             </div>
         </section>
@@ -1215,15 +1232,16 @@
                                             <option>-------------------------------------</option>
                                             <option value="recruit">RECRUIT</option>
                                             <option value="blog">BLOG</option>
+                                            <option>-------------------------------------</option>                                            
+                                            <option value="aplx">APLX</option>
+                                            <option value="catchme">CATCHME</option>                                                                                        
                                             <option>-------------------------------------</option>
                                             <option value="duni">DUNI</option>
                                             <option value="dunipilot">DUNI PILOT CENTER</option>
                                             <option value="dunistock">DUNI STOCK</option>
-                                            <option>-------------------------------------</option>
                                             <option value="dromi">DROMI</option>
                                             <option value="dkdk">DKDK</option>
                                             <option value="drdr">DRDR</option>
-                                            <option value="catchme">CATCHME</option>
                                         </select>
                                     </p>
                                     <ul class="social-icons">
