파트너에 콘진원 추가

--- a/index.html
+++ b/index.html
@@ -895,6 +895,14 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="icon-box icon-box-left">
                             <div class="icon-box-title">
+                                <p><a href="https://gcon.or.kr/" target=new>경기콘텐츠진흥원</a></p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6">
+                        <div class="icon-box icon-box-left">
+                            <div class="icon-box-title">
                                 <p><a href="https://www.tirrilee.kr/" target=new>(주)티릴리</a></p>
                             </div>
                         </div>
