슬로건 수정

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="keywords"
         content="AR, 증강현실, 메타버스, 콘텐츠, drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, 드론, 감성, 서비스, 소프트웨어, sw, vision, anomaly, detection, machine, ai, bigdata">
-    <meta name="description" content="즐겁고 재미있게 일하기 위한 진보된 플랫폼">
+    <meta name="description" content="즐겁게 일하기 위한 진보된 플랫폼">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:description" content="즐겁고 재미있게 일하기 위한 진보된 플랫폼">
+    <meta name="twitter:description" content="즐겁게 일하기 위한 진보된 플랫폼">
     <meta name="twitter:title" content="APLY Inc. | Advanced platform to fly">
     <meta name="twitter:image" content="https://www.aply.biz/assets/images/site_title.png">
 
@@ -35,12 +35,12 @@
     <meta property="og:title" content="어플라이 | APLY Inc. - Advanced platform to fly" />
     <meta property="og:image" content="https://www.aply.biz/assets/images/site_title.png" />
     <meta property="og:url" content="https://www.aply.biz" />
-    <meta property="og:description" content="즐겁고 재미있게 일하기 위한 진보된 플랫폼을 만나보세요!" />
+    <meta property="og:description" content="즐겁게 일하기 위한 진보된 플랫폼을 만나보세요!" />
 
     <meta itemprop="name" content="APLY">
     <meta itemprop="image" content="https://www.aply.biz/assets/images/site_title.png">
     <meta itemprop="description"
-        content="즐겁고 재미있게 일하기 위한 진보된 플랫폼을 만나보세요!">
+        content="즐겁게 일하기 위한 진보된 플랫폼을 만나보세요!">
     <meta itemprop="keywords"
         content="AR, 증강현실, 메타버스, 콘텐츠, drone, quadcopter, advanced, platform, mobile, software, service, emotion, emotional, data, bigdata, AI, 드론, 감성, 서비스, 소프트웨어, sw">
     <meta itemprop="url" content="https://www.aply.biz/">
@@ -143,7 +143,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12 m-auto text-center">
-                        <h4><b>즐겁고 재미있게 일하기 위한<br>진보된 플랫폼<span class="blinking-cursor">_</span></b></h4>
+                        <h4><b>즐겁게 일하기 위한<br>진보된 플랫폼<span class="blinking-cursor">_</span></b></h4>
                     </div>
                 </div>
             </div>
