--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12 m-auto text-center">
-                        <h4><b>즐겁게 일하기 위한<br>진보된 플랫폼<span class="blinking-cursor">_</span></b></h4>
+                        <h4><b>즐겁게 일하기 위한 진보된 플랫폼<span class="blinking-cursor">_</span></b></h4>
                     </div>
                 </div>
             </div>
