폴라리스, 키오스크 서비스 설명, 링크 추가, 문구 등 수정

--- a/recruit/index.html
+++ b/recruit/index.html
@@ -481,17 +481,19 @@
                                             onChange="changedSelector">
                                             <option selected>Family site</option>
                                             <option>-------------------------------------</option>
-                                            <option value="blog">BLOG</option>                                            
-                                            <option>-------------------------------------</option>                                            
                                             <option value="aplx">APLX</option>
-                                            <option value="catchme">CATCHME</option>                                                                                        
+                                            <option value="kiosk">R&D KIOSK</option>
+                                            <option value="polaris">POLARIS</option>
+                                            <option value="catchme">CATCHME</option>
+                                            <option value="dkdk">DKDK</option>
                                             <option>-------------------------------------</option>
                                             <option value="duni">DUNI</option>
                                             <option value="dunipilot">DUNI PILOT CENTER</option>
                                             <option value="dunistock">DUNI STOCK</option>
                                             <option value="dromi">DROMI</option>
-                                            <option value="dkdk">DKDK</option>
                                             <option value="drdr">DRDR</option>
+                                            <option>-------------------------------------</option>
+                                            <option value="blog">BLOG</option>
                                         </select>
                                     </p>
                                     <ul class="social-icons">
