--- a/symbol/index.html
+++ b/symbol/index.html
@@ -44,7 +44,7 @@
     <meta itemprop="url" content="https://www.aply.biz/">
 
     <!-- Favicons-->
-    <link rel="shortcut icon" href="https://aply.biz/assets/images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://home.aply.biz/assets/images/favicon.ico" type="image/x-icon">
     <link rel="alternate" href="https://www.aply.biz/" hreflang="x-default">
     <link rel="canonical" href="https://www.aply.biz/">
 
@@ -150,10 +150,12 @@
                                     </h6>
                                 </div>
                                 <div class="collapse show" id="collapse-3" data-parent="#accordion3">
-                                    <div class="accordion-item-body">
+                                    <div class="accordion-item-body">                                        
+                                        <p>- 즐겁게 일하기 위한 진보된 플랫폼</p>
                                         <p>- 보다 진보된 기술로 재미있고 멋진 서비스를 연구하고 개발합니다</p>
                                         <p>- 보다 진보된 기술로 쉽고 안전한 드론 서비스를 연구/개발합니다</p>
-                                        <p>- 즐겁고 재미있게 일하기 위한 진보된 플랫폼</p>
+                                        <p>- APLX : 증강현실 기반 홍보 솔루션</p>
+                                        <p>- APLX : THE PATH TO THE NEXT</p>
                                     </div>
                                 </div>
                             </div>
