--- a/recruit/index.html
+++ b/recruit/index.html
@@ -470,9 +470,9 @@
                                     </a>
                                 </div>
                                 <div class="textwidget">
-                                    <p>즐겁고 재미있게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
+                                    <p>재미있게 일하기 위한 진보된 플랫폼을 만나보세요.</p>
                                     <p>
-                                        Office: 5F, 17-5, Hwarang-ro 11-gil, Seongbuk-gu, Seoul, Republic of Korea
+                                        Office: 5F, 17-9, Hwarang-ro 11-gil, Seongbuk-gu, Seoul, Republic of Korea
                                         / 02751
                                         <hr>
                                         E-mail: <a href=mailto:contactus@aply.biz>recruit@aply.biz</a><br>                                        
